--- a/styles.css
+++ b/styles.css
@@ -7,22 +7,92 @@
     background-position: center;
 }
 
+.about {
+    text-align: center;
+}
+
+.coming-soon {
+    padding-top: 3rem;
+    padding-bottom: 3 rem;
+}
+
+.cplusplus {
+    width: 20%;
+}
+
+.css {
+    width: 20%;
+}
+
 .dark-section {
     background-color: #292b2c;
     color: white;
+}
+
+.filled-skill-bar {
+    background-color: #506584;
+    border-radius: 1rem;
+    padding-right: 2%;
+}
+
+.html {
+    width: 30%;
+}
+
+.java {
+    width: 50%;
+}
+
+.javascript {
+    width: 20%;
+}
+
+.light-section {
+    background-color: #faf7ef;
+}
+
+.profile-pic {
+    border-radius: 8%;
+    width: 180px;
+    text-align: center;
+}
+
+.python {
+    width: 50%;
 }
 
 .site-width {
     padding: 1% 15%;
 }
 
+.skills {
+    text-align: right;
+    background-color: #ddd;
+    color: white;
+    border-radius: 1rem;
+}
+
+.skills-p {
+    padding-top: 1rem;
+}
+
+.skills-container {
+    text-align: left;
+    width: 70%;
+}
+
 .skill-img {
     padding: 1rem;
+    color: #506584;
+}
+
+.title-name {
+    font-size: 4rem;
 }
 
 .title-text {
     text-align: center;
-    padding: 25%;
+    padding: 20%;
 }
 
 .q-stats {
@@ -33,10 +103,16 @@
     vertical-align: middle;
 }
 
-@media (min-width: 992px) {
+/*Changes in styling based on screen size*/
+@media (min-width:845px) {
+    .about {
+        text-align: left;
+    }
+}
+
+@media (min-width: 1120px) {
     .bio {
-        font-size: larger;
-        padding-bottom: 2%;
+        font-size: medium;
     }
 
     .navbar-brand {
@@ -51,4 +127,25 @@
     .title-name {
         font-size: 7rem;
     }
+}
+
+@media (min-width: 1476px) {
+
+    .bio {
+        font-size: larger;
+        padding-bottom: 2%;
+    }
+}
+
+/*Bootstrap classes adjusted for transparent navbar*/
+.navbar {
+    -webkit-transition: all 0.6s ease-out;
+    -moz-transition: all 0.6s ease-out;
+    -o-transition: all 0.6s ease-out;
+    -ms-transition: all 0.6s ease-out;
+    transition: all 0.6s ease-out;
+}
+
+.navbar.scrolled {
+    background: transparent;
 }
