--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,10 @@ a:hover {
     background-position: center;
 }
 
+.card-column-styling {
+    margin-top: 10px;
+}
+
 .coming-soon {
     padding-top: 3rem;
     padding-bottom: 3 rem;
@@ -45,16 +49,20 @@ a:hover {
 }
 
 .cplusplus {
-    width: 20%;
+    width: 35%;
 }
 
 .css {
-    width: 15%;
+    width: 30%;
 }
 
 .dark-section {
     background-color: #292b2c;
     color: white;
+}
+
+.django {
+    width: 30%;
 }
 
 .filled-skill-bar {
@@ -68,15 +76,15 @@ a:hover {
 }
 
 .html {
-    width: 30%;
+    width: 50%;
 }
 
 .java {
-    width: 40%;
+    width: 70%;
 }
 
 .javascript {
-    width: 15%;
+    width: 40%;
 }
 
 .light-section {
@@ -89,8 +97,16 @@ a:hover {
     text-align: center;
 }
 
+.react {
+    width: 50%;
+}
+
+.spring {
+    width: 30%;
+}
+
 .python {
-    width: 40%;
+    width: 60%;
 }
 
 .sbwc-logo {
@@ -141,6 +157,10 @@ a:hover {
 
 .vertical-center {
     vertical-align: middle;
+}
+
+.visa-logo {
+    width: 120px;
 }
 
 /*Bootstrap classes adjusted for transparent navbar*/
